--- a/content/inbox/数学/线性代数/零化子.md
+++ b/content/inbox/数学/线性代数/零化子.md
@@ -2,7 +2,9 @@
 
 显而易见, 线性泛函$\sigma$是一个映射/函数($V\to \mathbf{R}$), 那么既然是一个映射/函数, 则其必然有[[线性空间的像和核#核]]或零点. 记作$ker\ \sigma$. 则我们现在想研究其对偶空间, 即==零化子==的结构与作用. 
 
->[!定义]
+# 定义
+
+>[!定义] 零化子
 >记$U$为$V$的子空间, 则
 >$$
 >U^{0}=\{\varphi\in V^{*}:\forall u \in U,\varphi(u)=0\}
@@ -26,4 +28,20 @@ dim\ U^{0} = dim\ V - dim\ U
 $$
 > [!证明]
 >    假设$V=U\oplus W$, 则由上$V^{*}=U^{0}\oplus W^{0}$且$W^{0}=U^{*}$, 因此$dim\ V^{*} = dim\ U^{0} + dim\ U^{*}\implies dim\ V=dim\ U^{0} + dim\ U$即证. 
+
+# 零点集和零化子
+
+在线性代数的语境下, 以下两种表示实际上是同义反复: 
+
+>[!定理] 引理
+>1. $f\in (ker\ f)^{0}$
+>2. $\forall f \in U^{0}, (ker\ f)^{0}\subset U$
+
+类似的, 定义零化子的[[对偶]]元素: 零点集
+
+>[!定义] 零点集
+>假设$U$为$V^{*}$的子空间, 则
+>$$
+Z(U)=\{v\in V:\forall \varphi \in U,\varphi(U)=0\}
+$$
 
