Forcing an update with all files

--- a/content/inbox/数学/线性代数/零化子.md
+++ b/content/inbox/数学/线性代数/零化子.md
@@ -42,5 +42,5 @@ $$
 >[!定义] 零点集
 >假设$U$为$V^{*}$的子空间, 则
 >$$
-Z(U)=\{v\in V:\forall \varphi \in U,\varphi(U)=0\}
-$$
+>Z(U)=\{v\in V:\forall \varphi \in U,\varphi(U)=0\}
+>$$
