--- a/content/inbox/物理/电磁学/磁性.md
+++ b/content/inbox/物理/电磁学/磁性.md
@@ -17,8 +17,9 @@
 $$
 I = -\frac{e}{T} = -\frac{e\omega}{2\pi}
 $$
+磁矩:
 $$
-磁矩:\vec{P_{m}} = IS\vec{n} = -\frac{e\omega}{2\pi} \cdot \pi r^2 = -\frac{er^2}{2} \omega
+\vec{P_{m}} = IS\vec{n} = -\frac{e\omega}{2\pi} \cdot \pi r^2 = -\frac{er^2}{2} \omega
 $$
 角动量大小: 
 $$
