--- a/content/inbox/数学/微积分/二重积分.md
+++ b/content/inbox/数学/微积分/二重积分.md
@@ -23,19 +23,23 @@ $$
 # 重积分变量代换
 
 直接给结论: 
+
+对于积分中的变量 \( x, y \)，若存在以下参数化关系：
 $$
-\begin{aligned}
-& \text{对于任何一个积分式内 } x,y \text{，若有下述表达式：} \\
-& \qquad \begin{cases} 
-    \ x = x(u, v) \\ 
-    \ y = y(u,v) 
-\end{cases} \\[2ex]  % 增加垂直间距
-& \text{那么原来的积分会有：} \\
-& \qquad \iint\limits_{\mathbb{R}^2} f(x, y)\, \mathrm{d}x\mathrm{d}y 
+\begin{cases} 
+x = x(u, v) \\ 
+y = y(u, v) 
+\end{cases}
+$$
+
+### **积分变换公式**
+原积分可通过雅可比行列式转换为新变量 \( u, v \) 的表达式：
+$$
+\iint\limits_{\mathbb{R}^2} f(x, y)\, \mathrm{d}x\mathrm{d}y 
 = \iint\limits_{\mathbb{R}^2} f\big(x(u,v), y(u,v)\big) 
 \left| \frac{\partial(x,y)}{\partial(u,v)} \right| \mathrm{d}u\mathrm{d}v
-\end{aligned}
 $$
+
 
 该变量代换使用了[[Jacobi行列式]]
 
