--- a/content/inbox/数学/线性代数/商空间.md
+++ b/content/inbox/数学/线性代数/商空间.md
@@ -33,10 +33,8 @@ $$
 
 搞完上述定义之后, 大概率还是一脸懵逼: 我为什么要定义这些玩意? 这些和我要做的用什么关系? 
 
-我们不妨先从线性空间的$0$向量入手. 这个是最平凡但也是最特殊的向量. 从它的身上我们可以发现: 
-$$
-0\text{向量所在的等价类}\overline{0}\text{必然是}V\text{的子空间}
-$$
+我们不妨先从线性空间的$0$向量入手. 这个是最平凡但也是最特殊的向量. 从它的身上我们可以发现: ==$0$向量所在的等价类$\overline{0}$必然是$V$的子空间==
+
 证明很简单, 因为对加法和数乘封闭. 
 
 我们不妨再仔细观察一下: 一个非常极其抽象的**等价关系**和一个看起来具体可感一点的[[线性子空间]]绑定在了一起. 这为我们表示等价关系提供了一丝曙光. 
