--- a/content/inbox/数学/线性代数/零化子.md
+++ b/content/inbox/数学/线性代数/零化子.md
@@ -1,29 +1,58 @@
 标签: [[数学]] [[线性代数]] [[概念]] [[线性泛函]]
 
-显而易见, 线性泛函$\sigma$是一个映射/函数($V\to \mathbf{R}$), 那么既然是一个映射/函数, 则其必然有[[线性空间的像和核#核]]或零点. 记作$ker\ \sigma$. 则我们现在想研究其对偶空间, 即==零化子==的结构与作用. 
+显而易见, 线性泛函$\sigma$是一个映射/函数($V\to \mathbf{R}$), 那么既然是一个映射/函数, 则其必然有[[线性空间的像和核#核]]或零点. 记作$ker\ \sigma$. 则我们现在想研究其对偶空间, 即==零化子==的结构与作用.
 
->[!定义]
+# 定义
+
+>[!定义] 零化子
 >记$U$为$V$的子空间, 则
 >$$
 >U^{0}=\{\varphi\in V^{*}:\forall u \in U,\varphi(u)=0\}
 >$$
->为$U$的零化子. 
+>为$U$的零化子.
 
 零化子构成对偶空间的一个子空间. 
-
 # [[直和]]和零化子维数定理
 
-
 >[!定理] 引理
-设$V=U_{1}\oplus U_{2}$, 则$V^{0}=U_{1}^{0}\oplus U_{2}^{0}$, 且$U_{1}^{0}=U_{2}^{*},U_{2}^{0}=U_{1}^{*}$. 
-
+设$V=U_{1}\oplus U_{2}$, 则$V^{0}=U_{1}^{0}\oplus U_{2}^{0}$, 且$U_{1}^{0}=U_{2}^{*},U_{2}^{0}=U_{1}^{*}$.
 
 (证明好抽象, 打个 #补充 tag)
 
-通过此引理, 我们可以证明: 
-$$
-dim\ U^{0} = dim\ V - dim\ U
-$$
-> [!证明]
->    假设$V=U\oplus W$, 则由上$V^{*}=U^{0}\oplus W^{0}$且$W^{0}=U^{*}$, 因此$dim\ V^{*} = dim\ U^{0} + dim\ U^{*}\implies dim\ V=dim\ U^{0} + dim\ U$即证. 
+通过此引理, 我们可以证明:
 
+$$
+
+dim\ U^{0} = dim\ V - dim\ U
+
+$$
+
+> [!证明]
+>    假设$V=U\oplus W$, 则由上$V^{*}=U^{0}\oplus W^{0}$且$W^{0}=U^{*}$, 因此$dim\ V^{*} = dim\ U^{0} + dim\ U^{*}\implies dim\ V=dim\ U^{0} + dim\ U$即证.
+
+# 零点集和零化子
+
+在线性代数的语境下, 以下两种表示实际上是同义反复:
+>[!定理] 引理
+>1. $f\in (ker\ f)^{0}$
+>2. $\forall f \in U^{0}, (ker\ f)^{0}\subset U$
+
+类似的, 定义零化子的[[对偶]]元素: 零点集
+
+>[!定义] 零点集
+>假设$U$为$V^{*}$的子空间, 则
+>$$
+>Z(U)=\{v\in V:\forall \varphi \in U,\varphi(U)=0\}
+>$$
+
+因此针对上述的两个引理, 我们有重新进行的表述: 
+
+>[!定理] 零点集和零化子
+>1. 若$U$是$V^{*}$的子空间, 则$U=(Z(U))^{0}$
+>2. 若$U$是$V$的子空间, 则$U=Z(U^{0})$
+
+>[!证明]
+>1. 我们的思路是: 证明$U$是$Z(U)^{0}$的子空间, 随后证明两者维数相等即可. 假设$\phi$是$U$内映射, 则我们需要证明$\phi \in (Z(U))^{0}$. 假设$v \in Z(U)$, 则$\phi(v)=0$. 符合零化子定义, 因此原关系成立. 随后, 通过构造$U$以及$V^{*}$的[[基]], 通过线性扩张的方法以及运用[[线性相关]]的性质, 我们可以得到$dim\ Z(U)=dim\ V^{*}-dim\ U$, 又有上面的零化子性质, 所以$dim\ U=dim\ (Z(U))^{0}$. 
+>2. 类似的, 假设$v$是$U$内元素, 证明$v \in Z(U^{0})$. 这也是显然. 因为$U^{0}$是让所有$\phi(v)=0$, 则其零点必然为所有$v$. 维数证明和上述类似. 
+
+因此通过上述证明, 可以发现实际上==零化子是对偶空间的零点集==. 非常美妙的结论, 很对偶捏. 
