--- a/content/inbox/数学/线性代数/基本代数结构.md
+++ b/content/inbox/数学/线性代数/基本代数结构.md
@@ -6,7 +6,7 @@
 
 在以上讨论中, 我们所做的事情, 就是构建了一个代数系统(这是把我们平时所做的简单的运算进行抽象, 从而得出一个一般性的结构.)
 
->[!定义]
+>[!definition]
 >我们称一个非空集合以及一系列运算构成的系统为代数系统, 可以记为$<X:f_{1}, f_{2}\dots>$
 >这一些运算必须对于该系统保持封闭(即不能运算后得到的元素不在原集合内)
 
