--- a/content/inbox/数学/线性代数/复数域.md
+++ b/content/inbox/数学/线性代数/复数域.md
@@ -9,7 +9,7 @@
 我们这里采取极坐标的定义来确定平面. 即确定两个标准: 长度和角度. 显然的, 在笛卡尔坐标系上, 非常自然的就会取x轴正方向和y轴正方向的单位长度作为我们的单位元. 
 
 由于在$\mathbf{R}^{2}$中的加法我们已经验证满足交换群的定义([[基本代数结构#域]]), 那么现在只需要乘法满足即可. 那么如何定义呢? 
->[!定义]
+>[!definition]
 >+ 满足$u\cdot e_{1} = e_{1}\cdot u = u$
 >+ 且$|u \cdot v| = |u||v|$
 
