--- a/content/inbox/数学/线性代数/纤维.md
+++ b/content/inbox/数学/线性代数/纤维.md
@@ -3,3 +3,15 @@
 # 引入
 
 我们已经知道了, $ker\ \phi$显然是一个线性空间. 那么该线性空间可以被形式化的表述为$\phi^{-1}(0)$. 那么非常自然的想法: $\phi^{-1}(\lambda)$会是怎么样的呢? 
+
+>[!lemma] 引理 
+>若$r \in \mathbf{R}$, 则对于$\forall v \in \phi^{-1}(r), v' \in ker\ V$, 有$v+v' \in \phi^{-1}(r)$. 
+
+由此, 我们可以给出纤维丛的完整结构定义: 
+
+>[!definition] 纤维的结构
+>$\phi^{-1}(r) = v'+ker\ \phi$, 其中$v'$为$\phi^{-1}(r)$中任意一个向量. 
+
+看上去这个纤维的定义就是线性的, 因此以下的推论也是相对显然的: 
+
+
