Quartz sync: Aug 5, 2025, 12:18 PM

--- a/content/inbox/数学/线性代数/纤维.md
+++ b/content/inbox/数学/线性代数/纤维.md
@@ -14,4 +14,26 @@
 
 看上去这个纤维的定义就是线性的, 因此以下的推论也是相对显然的: 
 
+>[!corollary] 推论
+> 1. $\phi^{-1}(\lambda+\mu)=v_{\lambda}+v_{\mu}+ker\ \phi$
+> 2. $\phi^{-1}(\lambda \mu)=\lambda \phi^{-1}(\mu) = \lambda v_{\mu}+ker\ \phi$
+
+于是, 该定义下, 纤维本身也构成了一个线性空间, 称之为
+# 从纤维到映射的推广
+
+我们可以将$\phi$拓宽到$f$. 
+
+一个线性映射$f:V\to W$将$V$压缩到了$im\ f$上. 即可以如下定义: $f^{-1}(w)=v_{0}+ker\ f$. 该定义和纤维的定义完全相同, 因此可以认为就是纤维. 与此同时, 这个集合也是[[商空间]]的定义. 因此可以认为$V/ker\ f \cong im\ f$. 
+
+因此有如下定理: 
+>[!theorem] 商空间的纤维证明
+>假设$W$为$V$的一个线性空间, 则$V/W$为一个线性空间. 且$dim\ V/W = dim\ V - dim\ W$. 
+
+于是自然有以下推论
+
+>[!theorem] 第一同构定理
+>$(V/W)^{*}=W^{0}$
+
+>[!proof]
+>考虑到$V=W\oplus W'$, 两侧取对偶: $V^{*} = W^{*} \oplus (W')^{*} = W^{*} + W^{0}$. 由此得. 
 
