--- a/content/inbox/数学/线性代数/行列式.md
+++ b/content/inbox/数学/线性代数/行列式.md
@@ -1,6 +1,6 @@
 标签: [[数学]] [[线性代数]] [[概念]] [[n维向量和矩阵]]
 
-行列式作为一种数学工具 其能够体现的数学本质非常广泛. 将线性方程的系数组成系数矩阵/增广矩阵可以用来判断线性方程组是否有解; 也可以用来反映体积的变化; 也可以用来判断线性映射是否降维. 以下三种定义实际上是等价的
+行列式作为一种数学工具 其能够体现的数学本质非常广泛. 将线性方程的系数组成[[线性方程组的解|系数矩阵]]/增广矩阵可以用来判断线性方程组是否有解; 也可以用来反映体积的变化; 也可以用来判断线性映射是否降维. 以下三种定义实际上是等价的
 
 # 公理化定义(严谨版)
 
