update Linear quations

--- a/content/inbox/数学/线性代数/线性方程组的解.md
+++ b/content/inbox/数学/线性代数/线性方程组的解.md
@@ -63,4 +63,6 @@ $$
 >反之则使用反证法, 易证
 
 由上定理, 有推论: 
->[]
+>[!corollary] 推论
+>定义对角占优为$|a_{ii}|>\sum\limits_{j\neq i}|a_{ij}|$(即对角线上的元素绝对值大于同行所有的元素绝对值之和). 则必然有: 该矩阵可逆. 
+
