--- a/content/inbox/数学/线性代数/线性方程组的解.md
+++ b/content/inbox/数学/线性代数/线性方程组的解.md
@@ -10,7 +10,7 @@
 >[!theorem] 解数量的充要条件
 >在有解的前提条件下, 若: 
 >1. 系数矩阵的秩若为$n$, 则必然有唯一解
->2. 若$<n$, 则必然有无穷多解
+>2. 若$r<n$, 则必然有无穷多解
 
 # Cramer法则
 
@@ -50,7 +50,7 @@ $$
 其中$D$称为系数行列式. 
 
 >[!throrem] Cramer 法则
-对于$n$元$n$组线性方程式, 该方程具有唯一解, 且形式如下: 
+>对于$n$元$n$组线性方程式, 该方程具有唯一解, 且形式如下: 
 >1. 方程组1: 
 >	1. 全为$0$解$\iff D\neq0$
 >	2. 有唯一非零解/无穷多解$\iff D=0\ or\ r(A)<n$
@@ -63,6 +63,7 @@ $$
 >反之则使用反证法, 易证
 
 由上定理, 有推论: 
+
 >[!corollary] 推论
 >定义对角占优为$|a_{ii}|>\sum\limits_{j\neq i}|a_{ij}|$(即对角线上的元素绝对值大于同行所有的元素绝对值之和). 则必然有: 该矩阵可逆. 
 
