--- a/content/inbox/数学/线性代数/行列式.md
+++ b/content/inbox/数学/线性代数/行列式.md
@@ -34,7 +34,7 @@ $$
 $$\begin{align}
 \sum_{k=1}^n a_{kj} A_{ki} = a_{1j} A_{1i} + a_{2j} A_{2i} + \cdots + a_{nj} A_{ni} = 0 \quad (j \neq i) \\
 \sum_{k=1}^n a_{jk} A_{ik} = a_{j1} A_{i1} + a_{j2} A_{i2} + \cdots + a_{jn} A_{in} = 0 \quad (j \neq i) \\
-\end{align}$$ $$
+\end{align}$$ 
 即某一行(列)元素和另外一列(行)代数余子式乘积之和为0
 2. 一般情况下$|A\pm B|\neq|A|+|B|$, $|kA|=k^{n}|A|$, $|AB|=|A||B|$, $|A^{T}|=|A|$, $|A^{k}|=|A|^{k}$, $|A^{-1}|=|A|^{-1}$
 3. $A$可逆$\iff|A|\neq0$
@@ -68,15 +68,7 @@ $$
 
 # 伴随矩阵
 
-$$
-A^{*} = 
-\begin{pmatrix}
-A_{11} & A_{21} &\dots & A_{n1} \\
-A_{12} & A_{22} & \dots & A_{n2} \\
-\vdots & \vdots & \ddots  & \vdots \\
-A_{1n} & A_{2n} & \dots & A_{nn} 
-\end{pmatrix}
-$$
+$A^{*} = \begin{pmatrix}A_{11} & A_{21} &\dots & A_{n1} \\A_{12} & A_{22} & \dots & A_{n2} \\\vdots & \vdots & \ddots  & \vdots \\A_{1n} & A_{2n} & \dots & A_{nn} \end{pmatrix}$
 ### 性质
 
 1. 与[[矩阵运算#矩阵的逆]]关联: $AA^{*}=A^{*}A=|A|E$. 
