Update linear eqations

--- a/content/inbox/数学/微积分/最小二乘法.md
+++ b/content/inbox/数学/微积分/最小二乘法.md
@@ -34,7 +34,7 @@ b
 \sum_{i=1}^{n} y_{i}
 \end{pmatrix}
 $$
-这里似乎是使用Moore-Penrose广义逆矩阵来进行化简. 
+这里似乎是使用Moore-Penrose[[矩阵运算#广义逆矩阵]]来进行化简. 
 
 解得: 
 $$
