--- a/content/inbox/数学/线性代数/矩阵运算.md
+++ b/content/inbox/数学/线性代数/矩阵运算.md
@@ -129,9 +129,9 @@ $$
 3. $AX,XA$均为共轭对称矩阵
 
 则称呼$X$为$A$的$Moore-Penrose$广义逆矩阵. 该矩阵可以求出线性方程组$AX = b$的最小二乘解. 
+# 转置
 
-# [[n维向量和矩阵#转置]]
-
+[[n维向量和矩阵#转置]]
 给出一些基本性质
 1. $(A^{T})^{T} = A$(显然)
 2. $(A+B)^{T} = A^{T}+B^{T}$
