--- a/content/inbox/数学/线性代数/线性方程组的解.md
+++ b/content/inbox/数学/线性代数/线性方程组的解.md
@@ -67,3 +67,57 @@ $$
 >[!corollary] 推论
 >定义对角占优为$|a_{ii}|>\sum\limits_{j\neq i}|a_{ij}|$(即对角线上的元素绝对值大于同行所有的元素绝对值之和). 则必然有: 该矩阵可逆. 
 
+# 齐次方程解空间结构
+
+>[!theorem] 定理
+>1. 齐次方程组$AX=0$的解空间是$\mathbf{R}^{n}$的子空间. 
+>2. 假设表示矩阵($\mathbb{F}_{m\times n}$)的秩为$r$, 则解空间的维数为$n-r$, 且一组基为基础解系$\{X_{1},\dots X_{n-r}\}$. 
+
+该定理为
+$$
+dim\ \sigma = r(\sigma) + dim\ ker\ \sigma
+$$
+([[线性映射基本定理]])在线性方程组的应用
+
+# 非齐次方程解空间结构
+
+对于非齐次线性方程
+$$
+x_{1}\beta_{1}+\dots+x_{n}\beta_{n}=\mathbf{b}
+$$
+称
+$$
+x_{1}\beta_{1}+\dots+x_{n}\beta_{n}=\mathbf{0}
+$$
+为其导出组. 则
+>[!theorem] 定理
+>若$n$元非线性方程组有解, 则其解集为$U=\{\gamma_{0}+\eta|\eta \in W\}$. 其中$\gamma_{0}$为一个**特解**, 而$\eta$为通解. 因此任何一个有解的非齐次线性方程都可以写作
+>$$X=X_{0}+k_{1}X_{1}+\dots+k_{n}X_{n}$$
+
+可以观察发现, 该定理和[[商空间]]的表述方式是一样的, 即$U$为$W$的一个仿射子集, 进行了所谓的"平移"而已. 
+
+# 与[[对偶映射]]的联系
+
+从几何直观来看，线性方程组是一族超平面的交. 因此可以使用线性泛函重写为
+$$
+\bigcap_{i=1}^{k} \varphi_{i}^{-1}(b_{i})
+$$
+也就是一簇[[纤维]]的交点. 该组交点也属于仿射子集. 
+
+接着考察仿射子集的交点. 有引理: 
+
+>[!lemma] 仿射子集
+>仿射子集的交集若非空, 仍然是仿射子集
+
+退化一点的结论就是, 仿射子集交集仍然是线性空间. 
+
+因此我们可以根据以上的证明给出这样的构造: 
+$$
+\bigcap_{i=1}^{k} (v_{i}+W_{i}) = v_{0} + \bigcap_{i=1}^{k} W_{i}
+$$
+即: 所有仿射子空间的交集可以写作所有子空间的交集. 该解跟之前的[[线性方程组的解#齐次方程解空间结构]]几乎一样, 同样都是一个通解=特解+齐次解的形式. 于是根据[[纤维]]的结构, 我们可以同义替换: 
+$$
+\bigcap_{i=1}^{k} \varphi_{i}^{-1}(b_{i}) = v_{0}+\bigcap_{i=1}^{k}ker\ \varphi_{i}
+$$
+这样就得到了和代数方法一样的结论. 
+
