--- a/content/inbox/数学/线性代数/线性映射基本定理.md
+++ b/content/inbox/数学/线性代数/线性映射基本定理.md
@@ -11,26 +11,32 @@ $$
 r(\sigma) + dim\ ker\ \sigma = n
 $$
 证明思路：设小扩大
+#### **1. 基的构造**
+- 设 $\dim \ker \sigma = k$  
+- 取核空间 $\ker \sigma$ 的一组基 $\{\alpha_1, \dots, \alpha_k\}$  
+- 将其扩展为 $V$ 的基 $\{\alpha_1, \dots, \alpha_k, \alpha_{k+1}, \dots, \alpha_n\}$  
+- 需要证明 $\text{rank}(\sigma) = n - k$  
+- 只需证明 $\{\sigma(\alpha_{k+1}), \dots, \sigma(\alpha_n)\}$ 线性无关（因为它们生成像空间）
+
+#### **2. 线性无关性**
+假设存在标量 $c_{k+1}, \dots, c_n$ 使得：
 $$
-\begin{align}
-&1.\ \text{假设}\ \dim \ker \sigma = k,\ \text{设核空间的基为} \\ 
-&\quad \{\alpha_1, \dots, \alpha_k\},\ \text{可扩展为}\ V\ \text{的基} \\
-&\quad \{\alpha_1, \dots, \alpha_k, \alpha_{k+1}, \dots, \alpha_n\}. \\
-&\quad \text{问题转化为证明}\ rank(\sigma) = n - k. \\
-&\quad \text{只需证明}\ \{\sigma(\alpha_{k+1}), \dots, \sigma(\alpha_n)\} \\
-&\quad \text{线性无关（因它们生成像空间）。} \\[0.5em]
-&2.\ \text{假设存在标量}\ c_{k+1}, \dots, c_n,\ \text{使得} \\
-&\quad c_{k+1}\sigma(\alpha_{k+1}) + \cdots + c_n \sigma(\alpha_n) = 0, \\
-&\quad \text{即} \\
-&\quad \sigma(c_{k+1}\alpha_{k+1} + \cdots + c_n \alpha_n) = 0. \\
-&\quad \text{故}\ c_{k+1}\alpha_{k+1} + \cdots + c_n \alpha_n \in \ker \sigma, \\
-&\quad \text{可表示为} \\
-&\quad c_{k+1}\alpha_{k+1} + \cdots + c_n \alpha_n = c_1 \alpha_1 + \cdots + c_k \alpha_k. \\
-&\quad \text{由}\ \{\alpha_1, \dots, \alpha_n\}\ \text{线性无关，} \\
-&\quad \text{得所有}\ c_i = 0\ (i = 1, \dots, n). \\
-&\quad \text{因此}\ \{\sigma(\alpha_{k+1}), \dots, \sigma(\alpha_n)\}\ \text{线性无关。}
-\end{align}
+c_{k+1}\sigma(\alpha_{k+1}) + \cdots + c_n \sigma(\alpha_n) = 0
 $$
+这意味着：
+$$
+\sigma(c_{k+1}\alpha_{k+1} + \cdots + c_n \alpha_n) = 0
+$$
+因此：
+$$
+c_{k+1}\alpha_{k+1} + \cdots + c_n \alpha_n \in \ker \sigma
+$$
+可表示为：
+$$
+c_{k+1}\alpha_{k+1} + \cdots + c_n \alpha_n = c_1 \alpha_1 + \cdots + c_k \alpha_k
+$$
+由于 $\{\alpha_1, \dots, \alpha_n\}$ 线性无关，故所有 $c_i = 0$（$i = 1,\dots,n$）。  
+从而 $\{\sigma(\alpha_{k+1}), \dots, \sigma(\alpha_n)\}$ 线性无关。
 
 基于该重要定理，我们可以得到一些衍生结论：
 
