--- a/content/inbox/数学/线性代数/行列式.md
+++ b/content/inbox/数学/线性代数/行列式.md
@@ -30,12 +30,12 @@ $$
 # 性质
 
 对于 $n$ 阶行列式 $D = |a_{ij}|_{n \times n}$，有以下重要性质：
-1. 
+
 $$\begin{align}
 \sum_{k=1}^n a_{kj} A_{ki} = a_{1j} A_{1i} + a_{2j} A_{2i} + \cdots + a_{nj} A_{ni} = 0 \quad (j \neq i) \\
 \sum_{k=1}^n a_{jk} A_{ik} = a_{j1} A_{i1} + a_{j2} A_{i2} + \cdots + a_{jn} A_{in} = 0 \quad (j \neq i) \\
-\end{align}$$ 
-即某一行(列)元素和另外一列(行)代数余子式乘积之和为0
+\end{align}$$
+1. 某一行(列)元素和另外一列(行)代数余子式乘积之和为0
 2. 一般情况下$|A\pm B|\neq|A|+|B|$, $|kA|=k^{n}|A|$, $|AB|=|A||B|$, $|A^{T}|=|A|$, $|A^{k}|=|A|^{k}$, $|A^{-1}|=|A|^{-1}$
 3. $A$可逆$\iff|A|\neq0$
 4. 上三角/下三角矩阵行列式为主对角线乘积. 
