--- a/content/inbox/数学/线性代数/多项式.md
+++ b/content/inbox/数学/线性代数/多项式.md
@@ -1,1 +1,22 @@
 标签: [[数学]] [[线性代数]] [[概念]]
+
+在线性代数中暂时只研究一元多项式(习惯称一元多项式为多项式), 且简称多项式$p(x)$为$p$. 
+# 定义
+
+>[!definition] 多项式
+>设$\mathbf{F}$是某域，我们称$\mathbf{F}$上的一元多项式$p(x)$是一个形如下式的表达式，即
+>$$
+>p(x) = a_0 + a_1x + \cdots + a_mx^m
+>$$
+>其中$a_0, \dots, a_m \in F$，$m \in \mathbb{N}$，$x \notin \mathbf{F}$ 是一个符号，我们称为不定元。称$a_0, \dots, a_m$为多项式$p(x)$的系数，更特殊的，称$a_0$为多项式的常数项，$a_ix_{i}$称为第 $i$ 次项。对于非零多项式（即 $p(x) \neq 0$），我们称使得 $a_k \neq 0$ 成立的最大整数称为多项式的次数，记为 $\deg\ p = k$。对于零多项式，其次数定义为 $-1$。称 $a_k$ 为多项式的首项系数，若 $a_k = 1$，即多项式首项系数为 $1$，则称这一多项式为首一多项式。
+
+为了避免歧义, 我们引出一个引理:
+
+>[!lemma] 多项式引理
+>设$F$是数域，$a_0, \dots, a_m \in F$。若对任意 $x \in F$，有 $$p(x) = a_0 + a_1x + \cdots + a_mx^m = 0$$则 $a_0 = \cdots = a_m = 0$。
+
+在该引理保证下, 数域内可以确定两个多项式在任意一点值相等, 这两个多项式就相等. 
+
+在该定义下, $x$从一个自变量变为了一个形式化的东西, 因此上面的引理可以变为一个规定. 
+
+由于多项式抛却了函数, 变成了纯粹形式化的定义, 因此我们还需要对其运算法则进行重新定义: 
