--- a/content/inbox/数学/线性代数/多项式.md
+++ b/content/inbox/数学/线性代数/多项式.md
@@ -20,3 +20,21 @@
 在该定义下, $x$从一个自变量变为了一个形式化的东西, 因此上面的引理可以变为一个规定. 
 
 由于多项式抛却了函数, 变成了纯粹形式化的定义, 因此我们还需要对其运算法则进行重新定义: 
+
+>[!definition] 多项式的加法和乘法
+>设 $p(x) = a_0 + a_1x + \cdots + a_mx^m$，$q(x) = b_0 + b_1x + \cdots + b_nx^n$，则
+>1. 不妨设 $m \leqslant n$，则多项式的加法定义为
+>$$p(x) + q(x) = (a_0 + b_0) + (a_1 + b_1)x + \cdots + (a_m + b_m)x^m + b_{m+1}x^{m+1} + \cdots + b_nx^n,$$
+>2. 多项式的数乘定义为
+>$$k \cdot p(x) = k a_0 + k a_1x + \cdots + k a_mx^m,$$
+>其中 $k \in F$；
+>3. 多项式的乘法定义为
+>$$p(x)q(x) = \sum_{k=0}^{m+n} \left( \sum_{i+j=k} a_i b_j \right) x^k$$
+
+该定义和[[线性映射]]和[[矩阵运算]]的定义高度相像, 都是该空间成[[基本代数结构#环]]的要求. 
+
+显然的有以下推论(md早知道把多项式引入之前就不用受那么多罪了): 
+1. $\deg\ a+\deg\ b \leq \max\{\deg\ a,\deg\ b\}$
+2. $\deg\ ka = \deg\ a$
+3. $\deg\ ab = \deg\ a+\deg\ b$
+
