--- a/content/inbox/数学/线性代数/多项式整除.md
+++ b/content/inbox/数学/线性代数/多项式整除.md
@@ -27,7 +27,23 @@
 
 该概念类比到整数上, 就是两个整数乘以其乘法逆元($\pm1$)之后的多项式, 两者可以互相整除. 
 
-# 余式
+# 余式与因式
 
 >[!definition] 余式
+>假设$p(x),s(x)$均为一阶多项式且$s(x)\neq0$, 则必然存在$q(x),r(x)$一阶多项式使得$p(x)=s(x)q(x)+r(x)$, 且$\deg\ s>\deg\ r$
+
+证明很简单: 当$\deg\ p<\deg\ s$时, 令$q=0,r=p$即可. 当$\deg\ p>\deg\ s$时, 可以构造出一组唯一确定且线性无关的基. 
+
+>[!definition] 公因式、公倍式、最大公因式和最小公倍式
+>设$p(x), q(x), d(x) \in F[x]$. 若$d(x) \mid p(x)$且$d(x) \mid q(x)$则称$d(x)$是$p(x)$和$q(x)$的一个**公因式**. 
 >
+>若$p(x)$和$q(x)$的公因式$d(x)$满足：对$p(x)$和$q(x)$的任一公因式$d'(x)$都有  $d'(x) \mid d(x)$则称$d(x)$是$p(x)$和$q(x)$的一个**最大公因式**（**gcd**），通常记为
+>
+>$$(p(x), q(x)) = d(x)$$
+>
+>类似地，若$p(x) \mid l(x)$且$q(x) \mid l(x)$则称$l(x)$是$p(x)$和$q(x)$的一个**公倍式**。
+>
+>若$p(x)$和$q(x)$的公倍式$l(x)$满足：对$p(x)$和$q(x)$的任一公倍式$l'(x)$都有  $l(x) \mid l'(x)$则称$l(x)$是$p(x)$和$q(x)$的一个**最小公倍式**（**lcm**），通常记为 
+>
+>$$[p(x), q(x)] = l(x)$$
+
