--- a/content/inbox/数学/线性代数/欧几里得算法.md
+++ b/content/inbox/数学/线性代数/欧几里得算法.md
@@ -1,2 +1,26 @@
 标签: [[数学]] [[线性代数]] [[多项式]] [[数论]] [[公式]]
 
+目前暂时只讨论线性代数的内容. 即欧几里得辗转相除法在线代的应用. 
+
+借用[[多项式整除]]的概念, 可以给出以下定理
+
+>[!theorem] 辗转相除法
+>假设$p,q$均为一元多项式, 则其公因式$d(x)$必然存在, 且必然存在一元多项式$u,v$使得
+>$$
+>d(x) = u(x)p(x) + v(x)q(x)
+>$$
+
+>[!proof] 证明
+>使用[[多项式整除#余式与因式]]的概念, $\deg\ r$严格单调递减, 因此对递推$r_{n-2}(x)=r_{n-1}(x)s_{n}(x)+r_{n}(x)$, 必然在有限次循环递归中$r_{n}=0$. 此时的递推公式为$r_{m-1}(x)=r_{m}(x)s_{n}(x)$. 因此此时$r_{m}|r_{m-1}$. 上一级递推为$r_{m-2}(x)=r_{m-1}(x)s_{m}(x)+r_{m}(x)$. 因此$r_{m}|r_{m-2}$. 以此类推, 最上级公式为$p(x) = q(x)s_1(x) + r_1(x),q(x) = r_1(x)s_2(x) + r_2(x)$, 所以由于所有$r$都可以被$r_{m}$整除, 自然$p,q$也可以被整除. 
+>同样的思路, 一步步往上面反代($r_{n},r_{n-1},\dots$)可以表示为$p,q$两个因式. 
+
+可以合理的从两个多项式拓展到多个多项式! 
+
+若是两个因式**互素**的话(公因式为1), 则有相对特殊的定理: 裴蜀定理
+
+>[!theorem] 裴蜀定理
+>两个多项式$p(x),q(x)$互素的充要条件是存在$u(x),v(x)$使得
+>$$
+>u(x)p(x)+v(x)q(x)=1
+>$$
+
