--- a/content/inbox/数学/线性代数/多项式整除.md
+++ b/content/inbox/数学/线性代数/多项式整除.md
@@ -47,3 +47,10 @@
 >
 >$$[p(x), q(x)] = l(x)$$
 
+最小公倍式和最大公因式按道理来说都有无数个(可以是任意的k倍), 但是为了定义的方便, 我们规定这两个式子都是首一多项式. 于是又定理
+
+>[!theorem] 定理
+>$$
+>p(x)q(x) = (p(x),q(x))[p(x),q(x)]
+>$$
+
