Quartz sync: Aug 8, 2025, 4:25 PM

--- a/content/inbox/数学/线性代数/同余和中国剩余定理.md
+++ b/content/inbox/数学/线性代数/同余和中国剩余定理.md
@@ -10,7 +10,8 @@
 
 先来初等数论版, 再上多项式版
 
->[!theorem] 中国剩余定理给定一个整数系统：
+>[!theorem] 中国剩余定理
+>给定一个整数系统：
 >$x \equiv a_1 \pmod{m_1}$
 >$x \equiv a_2 \pmod{m_2}$
 >...
@@ -18,7 +19,7 @@
 >如果模数 $m_1, m_2, \dots, m_k$ 是**两两互质**的（即对于任意 $i \neq j$，$\gcd(m_i, m_j) = 1$），那么这个同余方程组在模 $M = m_1 m_2 \dots m_k$ 的意义下有**唯一解**。
 
 >[!proof] 证明
->该证明是一个构造性证明, 即可以直接构造出该方程的解. 
+>该证明是一个构造性证明, 即可以直接构造出该方程组的解. 
 >我们可以将该方程的解拆成$n$份, 第$n$份分别满足$x\equiv 0(mod\ m_{i})(i=1,2,\dots n-1,n+1,\dots k)$, $x\equiv a_{n}(mod\ m_{n})$, 只要我们能够分别构造出这$n$组基, 即可得到满足要求的解. 
 >我们假设$P=\prod_{i=1}^{k}m_{i}, M_{i} = \frac{P}{m_{i}}$. 因此$M_{i},m_{i}$必然互素. 所以根据裴蜀定理, 必然存在$x_{i},y_{i}$使得$M_{i}x_{i}+m_{i}y_{i}=1$. 所以$M_{i}x_{i}\equiv 1(mod\ m_{i})$. 故必然存在$\lambda_{i} = a_{i}x_{i}M_i$满足以上$n$组基的条件. 则最后的解为$Q=\sum_{i=1}^{k}\lambda_{i}$. 
 >接下来, 假设存在两个不一样的解$Q_{1},Q_{2}$, 则必然有$Q_{1}-Q_{2}\equiv 0(mod\ m_{i})$. 因此将所有同余式相乘: $Q_{1}-Q_{2} \equiv 0(mod\ M)$. 即证明在模$M$意义下的唯一性. 
