Quartz sync: Aug 10, 2025, 8:58 PM

--- a/content/inbox/数学/线性代数/多项式整除.md
+++ b/content/inbox/数学/线性代数/多项式整除.md
@@ -47,10 +47,32 @@
 >
 >$$[p(x), q(x)] = l(x)$$
 
-最小公倍式和最大公因式按道理来说都有无数个(可以是任意的k倍), 但是为了定义的方便, 我们规定这两个式子都是首一多项式. 于是又定理
+最小公倍式和最大公因式按道理来说都有无数个(可以是任意的k倍), 但是为了定义的方便, 我们规定这两个式子都是首一多项式. 于是有定理
 
 >[!theorem] 定理
 >$$
 >p(x)q(x) = (p(x),q(x))[p(x),q(x)]
 >$$
+
+# 不可约多项式
+
+哎呀这些概念好烦, 不想写证明, 我直接使用数论的概念来说吧. 
+
+不可约多项式类似素数, 即不可以分解成两个更低$\deg$的多项式的多项式. (该定义应当限制数域$\mathbb{F}$, 否则可能出现实数域不可约 复数域可约的情况)
+
+### 多项式的唯一分解定理
+
+该定理说明: 
+1. 任何多项式都可以被分解为若干不可约多项式的乘积
+2. 在不计相伴多项式和顺序的前提下, 该分解是唯一的. 
+
+# 重因式
+
+根据上面的定理, 我们可以将任意一个多项式分解为以下的形式
+$$
+p(x) = c\cdot (q_{1}(x))^{\alpha_{1}} \cdot (q_{2}(x))^{\alpha_{2}} \cdot \dots
+$$
+其中$q_{i}(x)$为不可约多项式, $\alpha_{i}$为自然数. 若$\alpha_{i}>1$, 则定义该式为多项式的重因式. 
+
+有一种相对便利的方法判断该式的重因式是否存在. 可以定义多项式$p(x)$的导数为$p'(x)=a_{1}+2a_{2}x+3a_{3}x^{2}+\dots$则$p(x)$的没有重因式的充要条件为$(p(x),p'(x))=1$. 
 
