Quartz sync: Aug 11, 2025, 5:08 PM

--- a/content/inbox/数学/线性代数/不变子空间.md
+++ b/content/inbox/数学/线性代数/不变子空间.md
@@ -39,3 +39,27 @@ $$
 >若对映射$\sigma$, $V$的子空间$U$满足任意$\alpha \in V, \sigma(\alpha) \in V$, 则称$U$为映射$\sigma$的不变子空间, 简记为$\sigma-$子空间
 
 还给出了限制映射的定义, 我觉得没必要, 简单来说就是把某个映射限制到子空间$U$而不是全空间$V$. 
+
+根据以上的定义, 我们可以自然的引入如下定理: 
+>[!theorem] 定理
+>假设某映射在某组基下的表示矩阵可以被表示为分块对角矩阵的形式$A=diag(A_{1},\dots A_{n})$的当且仅当全空间$V$可以被分解为若干不变子空间的直和, 即$V=U_{1}\oplus\dots \oplus U_{n}$. 其中每个$U_{i}$都是不变子空间, 且限制映射在$U_{i}$下的表示矩阵为$A_{i}$. 
+
+可以简单验证: 平凡的子空间$0,V,ker\ \sigma,im\ \sigma$, 均为不变子空间. 
+
+再定义一个东西: 循环子空间: 
+
+>[!definition] 循环子空间
+>假设$\mathcal{T}$是一个线性映射, $v$是一个向量. 若子空间$W$满足$$W=span\{v,Tv,T^{2}\mathbf{v},\dots,T^{k}\mathbf{v}..\}$$则称$W$是一个由$v$生成的$T-$循环子空间. 注意该空间为有限维空间
+>即在有限次操作后, 最终向量张成空间维数是有限的. 
+
+有定理: 
+>[!theorem] 定理
+>设 $V$ 是有限维线性空间，$T \in L(V)$，$v \in V$ 是一个非零向量，$W$ 是由 $v$ 生成的 $T$-循环子空间，则:
+>1. $W$ 是 $T$ 包含 $v$ 的最小不变子空间; 
+>2. 若 $W$ 的维数为 $m$，则 $W$ 的一组基为 $\{v, Tv, \dots, T^{m-1}v\}$（我们称其为一组循环基）. 
+
+>[!proof] 证明
+>1. 证明不变子空间非常简单, 只需要对任意向量$u$, $Tu$均在子空间内即可. 显而易见. 再假设$U$内存在某向量$w$, 则经过线性映射$T$后, 该向量必然还停留在子空间内. 因此, 显然有$W\subset U$, 即$W$是最小的子空间
+>2. 假设若干次迭代后, $U$的空间基为$\dots j-1$(原空间有限维数, 必然会可以使用有限个元素表示). 因此$T^{j}v \in U$. 随后任取$u \in U$, 则$u = c_{1}v+\dots+c_{j-1}T^{k-1}v$. 即$Tu$在$U$内, 可以证明$U$也是一个$T$的不包含$v$的不变子空间. 故根据定义$W \subset U$, 又因为定义$U\subset W$($U$是$W$的向量子集张成的), 所以两个空间实际相同. 又因为应当有$m$个基, 因此次数为$m-1$. 
+
+此外还可以在此基础上定义商线性变换: $(\sigma/U)(v+U)=\sigma(v)+U$. 
