Quartz sync: Aug 11, 2025, 9:31 PM

--- a/content/inbox/数学/线性代数/特征值和特征向量.md
+++ b/content/inbox/数学/线性代数/特征值和特征向量.md
@@ -35,3 +35,22 @@ $$
 >2. $\prod \limits_{i=1}^{n}\lambda_{i}=|A|$
 
 以上两个定理都是基于韦达定理和行列式展开定理推导出来的. 
+
+由此我们自然的引入[[特征多项式]]. 
+
+随后两个定理:
+>[!theorem] 定理
+>1. 若$AB$有特征值$\lambda$, 则$\lambda$也必然为$BA$的特征值
+>2. 当$A\in M_{m\times n},B\in M_{n\times m}$时, $\begin{pmatrix}AB&O\\ B&O\end{pmatrix} \sim \begin{pmatrix}O&O\\ B&BA\end{pmatrix}$, 且当$m=n$时, $|\lambda E-AB|=|\lambda E-BA|$. 
+
+>[!proof] 证明
+>1. 假设$(AB)\alpha=\lambda\alpha$, 则左乘$B$有: $(BA)(B\alpha)=\lambda(B\alpha)$, 即$BA$的特征向量还是$\lambda$, 特征向量为$B\alpha$. 
+>2. $$\begin{pmatrix}E_m & -A \\ O & E_n\end{pmatrix} \begin{pmatrix}AB & O \\ B & O\end{pmatrix} \begin{pmatrix}E_m & A \\ O & E_n\end{pmatrix} = \begin{pmatrix}O & O \\ B & BA\end{pmatrix}.$$故相似. 其特征多项式相同. 根据[[行列式#性质]]有: $\begin{vmatrix}A&O\\ B&C\end{vmatrix}=|A||C|$, 因此展开后即得$|\lambda E_{m}-AB||\lambda E_{n}|=|\lambda E_{n}-BA||\lambda E_{m}|\implies \lambda^{n}|\lambda E_{m}-AB|=\lambda^{m}|\lambda E_{n}-BA|$. 
+
+以下定理是[[基变换#基选择对坐标的影响]]的推论: 
+>[!corollary] 推论
+>若$P^{-1}AP=B$, 则$A$关于$\lambda$的特征向量$X$和$B$关于$\lambda$的特征向量$Y$满足: $B=P^{-1}A$
+
+>[!proof] 证明
+>$AX=\lambda X\implies PBP^{-1}X=\lambda X\implies BP^{-1}X=\lambda P^{-1}X$. 因此$B$的特征向量$Y$就是$P^{-1}X$. 
+
