--- a/content/inbox/数学/线性代数/相似标准形.md
+++ b/content/inbox/数学/线性代数/相似标准形.md
@@ -23,4 +23,5 @@
 3. 相似矩阵的转置, 共轭, 求逆, 伴随矩阵以及相似矩阵的任意多项式均相似. 
 4. 若分块矩阵的相同部位的矩阵相似, 则该大矩阵也相似
 5. 相似后的幂等, 对合, 幂零矩阵均保留原有性质. 
+6. 相似矩阵之间有相同的[[特征值和特征向量|特征值]], 行列式和迹, 但是特征向量不一定相同. 
 
