Quartz sync: Aug 12, 2025, 4:27 PM

--- a/content/inbox/数学/线性代数/特征值和特征向量.md
+++ b/content/inbox/数学/线性代数/特征值和特征向量.md
@@ -54,3 +54,43 @@ $$
 >[!proof] 证明
 >$AX=\lambda X\implies PBP^{-1}X=\lambda X\implies BP^{-1}X=\lambda P^{-1}X$. 因此$B$的特征向量$Y$就是$P^{-1}X$. 
 
+# 性质
+
+1. 对映射和特征值同时进行数乘, 若干次方, 求逆, 多项式等操作, 特征值关系仍然成立
+2. $|A|\lambda^{-1}$是$A^{*}$的特征值
+3. $A \& A^{T}$有相同的特征值
+4. $A$ 可逆 $\Leftrightarrow$ $A$ 的所有特征值 $\lambda_i \neq 0$; $A$ 不可逆 $\Leftrightarrow$ $A$ 至少有一个特征值 $\lambda_i = 0$；
+5. $\lambda E + A$ 可逆 $\Leftrightarrow$ $-\lambda$ 不是 $A$ 的特征值；
+6. 定理：若 $\det(E - A^2) = 0$，则 $A$ 至少有一个特征值 $\lambda = \pm 1$。
+7. 特殊矩阵的特征值
+	- 对合矩阵（$A^2 = E$）：特征值只能是 $\lambda = \pm 1$；但未必同时包含 $1$ 和 $-1$（例如 $A = E$ 或 $A = -E$）。
+	- 幂等矩阵（$A^2 = A$）：特征值只能是 $\lambda = 0$ 或 $1$。
+	- 幂零矩阵（$\exists k \in \mathbb{N}, A^k = O$）：特征值只能是 $\lambda = 0$。
+8. 平移矩阵的特征值：设 $A = \lambda_0 E + B$，且 $B$ 的特征值为 $\lambda_1, \lambda_2, \dots, \lambda_n$，则 $A$ 的特征值为 $\lambda_0 + \lambda_i$（$i = 1, \dots, n$）。
+9. 分块对角矩阵的特征值：若 $A = \operatorname{diag}(A_1, A_2, \dots, A_m)$ 为分块对角矩阵，则 $A$ 的特征值为所有 $A_i$ 的特征值的并集。
+
+# 与[[不变子空间]]的关系
+
+>[!theorem] 定理
+>假设$V$是有限维的, 则
+>1. $\sigma$不同特征值对应的特征向量各线性无关
+>2. 不同特征值对应的特征子空间的直和为全空间
+>3. 最多有$dim\ \sigma$个绝对值
+
+>[!proof] 证明
+>1. 假设线性相关, 则必然存在最小的正整数$k$使得能找到$c_{1}\xi_{1}+\dots+c_{k-1}\xi_{k-1}=\xi_{k}$. 两侧同时线性映射, 有$\lambda_{1}c_{1}\xi_{1}+\dots+\lambda_{k-1}c_{k-1}\xi_{k-1}=\lambda_{k}\xi_{k}$; 两侧同乘$\lambda_{k}$, 再两式相减: $(\lambda_{k}-\lambda_{1})c_{1}\xi_{1}+\dots+(\lambda_{k}-\lambda_{k-1})c_{k-1}\xi_{k-1}=0$. 且$\xi_{i}$之间线性无关, 因此$\xi_{i}=0$. 不满足特征向量不为0的假设. 
+>2. 在[[直和]]的性质中, 最好证的是$\alpha=\alpha_{1}+\dots+\alpha_{n}$. 显然, 根据上面的定理, 各特征向量线性无关, 故必然有$\xi_{1}=\dots=\xi_{n}=0$, 满足直和的条件. 
+>3. 上面证明为直和 显然
+
+因此有两个推论: 
+>[!corollary] 推论
+>1. 一个向量不能属于多个特征值的特征向量
+>2. 各特征子空间的基向量线性无关, 并且其和为全空间的基. 
+
+# 实数域和复数域的讨论
+
+根据[[代数基本定理]]以及特征多项式, 可以得出以下简单的引理: 
+
+>[!lemma] 引理
+>若$\sigma \in \mathcal{L}(V)$, $V$是$n$维线性复空间, 则$\sigma$必然有$n$个特征值
+
