--- a/content/inbox/数学/线性代数/相似标准形.md
+++ b/content/inbox/数学/线性代数/相似标准形.md
@@ -25,3 +25,15 @@
 5. 相似后的幂等, 对合, 幂零矩阵均保留原有性质. 
 6. 相似矩阵之间有相同的[[特征值和特征向量|特征值]], 行列式和迹, 但是特征向量不一定相同. 
 
+接下来的问题是, 已知两个矩阵相似, 我们如何衡量两个矩阵的相似程度? 引入以下定理: 
+>[!theorem] 定理
+>假设$A,B$分别为$n,m$阶方阵, $A,B$之间有$r$个公共[[特征值和特征向量|特征值]], 则$AX-XB=0$必然有[[秩]]$r$的矩阵解. 反之亦然, 至少有$r$个公共特征值才能满足有秩$r$的矩阵解
+
+证明是构造性的. 
+>[!proof] 证明
+>假设公共特征值对应的特征向量为$(\alpha_{1},\dots,\alpha_{r}),(\beta_{1},\dots,\beta_{r})$. 则构造$X=(\alpha_{1},\dots,\alpha_{r})\cdot(\beta_{1},\dots,\beta_{r})^{T}$即满足原方程. 又根据[[秩等式与不等式]], $r(AB)\leq \min\{A,B\}=r$, $r(AB)\geq r(A)+r(B)-n$即得$r(AB)=r$. 
+>反之懒得证了
+
+由此有推论: $AX=XB$无解的充要条件是$AB$无公共特征值. 
+
+
