Quartz sync: Aug 14, 2025, 5:09 PM

--- a/content/inbox/数学/线性代数/特征值和特征向量.md
+++ b/content/inbox/数学/线性代数/特征值和特征向量.md
@@ -8,7 +8,7 @@ $$
 
 # 定义
 
->[!definition] 特征值和特征向量(线性映射 version)
+>[!definition] 特征值和特征向量([[线性映射]] version)
 >假设$\sigma$是一个定义在线性空间$V(\mathbf{F})$上的线性变换, 若存在数$\lambda \in \mathbf{F}$, 和非零向量$\xi \in V$, 使得$\sigma(\xi)=\lambda \xi$, 则称呼$\lambda$为$\sigma$的一个特征值, $\xi$为$\sigma$的一个特征向量
 
 >[!definition] 特征值和特征向量(矩阵 version)
@@ -22,7 +22,7 @@ $$
 4. $\sigma-\lambda I$不可逆
 证明: 参考[[线性空间的像和核]]即可. 
 
-因为$\sigma-\lambda I$不可逆, 故行列式$|A-\lambda I|=0$. 故可通过这个方法求得特征值. 该多项式称为矩阵的==特征多项式==. 
+因为$\sigma-\lambda I$不可逆, 故[[行列式]]$|A-\lambda I|=0$. 故可通过这个方法求得特征值. 该多项式称为矩阵的==特征多项式==. 
 
 >[!theorem] 行列式展开定理
 >对$n$阶矩阵$A$, 记
@@ -67,18 +67,18 @@ $$
 	- 幂等矩阵（$A^2 = A$）：特征值只能是 $\lambda = 0$ 或 $1$。
 	- 幂零矩阵（$\exists k \in \mathbb{N}, A^k = O$）：特征值只能是 $\lambda = 0$。
 8. 平移矩阵的特征值：设 $A = \lambda_0 E + B$，且 $B$ 的特征值为 $\lambda_1, \lambda_2, \dots, \lambda_n$，则 $A$ 的特征值为 $\lambda_0 + \lambda_i$（$i = 1, \dots, n$）。
-9. 分块对角矩阵的特征值：若 $A = \operatorname{diag}(A_1, A_2, \dots, A_m)$ 为分块对角矩阵，则 $A$ 的特征值为所有 $A_i$ 的特征值的并集。
+9. 分块[[对角矩阵]]的特征值：若 $A = \operatorname{diag}(A_1, A_2, \dots, A_m)$ 为分块对角矩阵，则 $A$ 的特征值为所有 $A_i$ 的特征值的并集。
 
 # 与[[不变子空间]]的关系
 
 >[!theorem] 定理
 >假设$V$是有限维的, 则
 >1. $\sigma$不同特征值对应的特征向量各线性无关
->2. 不同特征值对应的特征子空间的直和为全空间
+>2. 不同特征值对应的特征子空间的[[直和]]为全空间
 >3. 最多有$dim\ \sigma$个绝对值
 
 >[!proof] 证明
->1. 假设线性相关, 则必然存在最小的正整数$k$使得能找到$c_{1}\xi_{1}+\dots+c_{k-1}\xi_{k-1}=\xi_{k}$. 两侧同时线性映射, 有$\lambda_{1}c_{1}\xi_{1}+\dots+\lambda_{k-1}c_{k-1}\xi_{k-1}=\lambda_{k}\xi_{k}$; 两侧同乘$\lambda_{k}$, 再两式相减: $(\lambda_{k}-\lambda_{1})c_{1}\xi_{1}+\dots+(\lambda_{k}-\lambda_{k-1})c_{k-1}\xi_{k-1}=0$. 且$\xi_{i}$之间线性无关, 因此$\xi_{i}=0$. 不满足特征向量不为0的假设. 
+>1. 假设[[线性相关]], 则必然存在最小的正整数$k$使得能找到$c_{1}\xi_{1}+\dots+c_{k-1}\xi_{k-1}=\xi_{k}$. 两侧同时线性映射, 有$\lambda_{1}c_{1}\xi_{1}+\dots+\lambda_{k-1}c_{k-1}\xi_{k-1}=\lambda_{k}\xi_{k}$; 两侧同乘$\lambda_{k}$, 再两式相减: $(\lambda_{k}-\lambda_{1})c_{1}\xi_{1}+\dots+(\lambda_{k}-\lambda_{k-1})c_{k-1}\xi_{k-1}=0$. 且$\xi_{i}$之间线性无关, 因此$\xi_{i}=0$. 不满足特征向量不为0的假设. 
 >2. 在[[直和]]的性质中, 最好证的是$\alpha=\alpha_{1}+\dots+\alpha_{n}$. 显然, 根据上面的定理, 各特征向量线性无关, 故必然有$\xi_{1}=\dots=\xi_{n}=0$, 满足直和的条件. 
 >3. 上面证明为直和 显然
 
@@ -94,3 +94,20 @@ $$
 >[!lemma] 引理
 >若$\sigma \in \mathcal{L}(V)$, $V$是$n$维线性复空间, 则$\sigma$必然有$n$个特征值
 
+类似于[[实数域&有理数域因式分解]]有以下拓展结论: 
+>[!theorem] 定理
+>若$\sigma \in \mathcal{L}(V)$, $V$是$n$维线性空间, 则$\sigma$必然有不变子空间为1维或2维. 
+
+>[!proof] 证明
+>显然, 若$V$是[[复数域]]的, 则全部都是1维子空间
+>若$V$是实数域的, 则假设特征值为$a+bi$, 特征向量为$\alpha+\beta i$, 有$\sigma(\alpha+\beta i)=(a+bi)(\alpha+\beta i)=(a\alpha-b\beta)+(b\alpha +a\beta)i$. 即$\sigma(\alpha)=a\alpha-b\beta,\sigma(\beta)=b\alpha+a\beta$. 因此为二维[[不变子空间]]. 
+
+通过直观的例子, 我们可以发现, 将一个特征向量进行线性映射, 其后实数和复数将会产生不同的几何效应: 
+1. 实数特征值会在直线上伸缩
+2. 复数特征值不仅会在直线上伸缩, 除此之外还会进行旋转. 
+
+除此之外, 我们还能发现一个东西: 
+>[!theorem] 定理
+>线性变换中$\sigma$的特征值的重数(代数重数)要大于等于其特征子空间$V_{\lambda_{i}}$的维数(几何重数). 
+
+因此我们要讨论代数重数和几何重数相等和不相等的时候如何对原空间进行分解使得我们可以获得较为简单的矩阵表示，继续我们简化矩阵表示的目标.
