Quartz sync: Aug 14, 2025, 10:43 PM

--- a/content/inbox/数学/线性代数/可对角化.md
+++ b/content/inbox/数学/线性代数/可对角化.md
@@ -34,3 +34,8 @@ $\sigma$可对角化和以下条件等价:
 2. 对应的[[基和维数]]是什么? 
 3. 转换的矩阵$P$是什么? 
 
+以下是步骤: 
+1. 写出$A$
+2. 根据$|\lambda I-A|=0$求出特征值
+3. 计算$(\lambda I-A)\mathbf{x}=0$, 求得特征向量
+4. 按列组合成$P$. 对角矩阵实际上就是特征值按照对角线依次排列. 
