--- a/content/inbox/数学/线性代数/对角矩阵.md
+++ b/content/inbox/数学/线性代数/对角矩阵.md
@@ -12,7 +12,7 @@ d_{1} \\
  &  &  & d_{n} 
 \end{pmatrix}
 $$
-假设$A$矩阵为$n\times n$矩阵. 有: $A$右乘对角矩阵, 相当于对第$i$元素乘$d_{i}$. 左乘则是相当于第$i$行元素乘$d_{i}$. 非常类似于[[矩阵运算#^3bc44d]]. 
+假设$A$矩阵为$n\times n$矩阵. 有: $A$右乘对角矩阵, 相当于对第$i$列元素乘$d_{i}$. 左乘则是相当于第$i$行元素乘$d_{i}$. 非常类似于[[矩阵运算#^3bc44d]]. 
 
 # 性质
 
