Quartz sync: Aug 16, 2025, 3:23 PM

--- a/content/inbox/数学/线性代数/特征值和特征向量.md
+++ b/content/inbox/数学/线性代数/特征值和特征向量.md
@@ -111,3 +111,15 @@ $$
 >线性变换中$\sigma$的特征值的重数(代数重数)要大于等于其特征子空间$V_{\lambda_{i}}$的维数(几何重数). 
 
 因此我们要讨论代数重数和几何重数相等和不相等的时候如何对原空间进行分解使得我们可以获得较为简单的矩阵表示，继续我们简化矩阵表示的目标.
+
+# 应用
+### 平方根问题
+
+没地方放了, 随便找个位置吧. 
+>[!definition] 定义
+>假设$\tau \in \mathcal{L}(V)$和$\sigma \in \mathcal{L}(V)$满足$\tau^{2}=\sigma$, 则称$\tau$是$\sigma$的平方根. 
+
+有如下结论: 
+1. 若$N$为幂零矩阵, 则$(N+I)$必定存在平方根(证明, 借用隔壁泰勒公式的形式构造)
+2. 若$\sigma$可逆, 则其必然有平方根. 
+
