--- a/content/inbox/数学/线性代数/相似标准形.md
+++ b/content/inbox/数学/线性代数/相似标准形.md
@@ -1,4 +1,4 @@
-标签: [[数学]] [[线性代数]] [[概念]] [[公式]] [[n维向量和矩阵]]
+标签: [[数学]] [[线性代数]] [[概念]] [[公式]] [[n维向量和矩阵]] [[矩阵变换]]
 
 我们接下来从线性映射和线性空间中抽身出, 来探讨另一个在线性代数里至关重要的东西: 怎么样的构造才能使得[[线性映射]]尽可能简单, 即方便计算和表示. 该矩阵标准形即为相似标准形. 
 
